feat: Implement ScheduleManager for handling notifications
- Added ScheduleManager class to manage scheduling, cancelling, and rescheduling notifications.
- Integrated UserNotifications framework for iOS notification handling.
- Implemented methods for scheduling, cancelling, and rescheduling notifications based on various types (one-time, daily, weekly, monthly, yearly, custom).
- Introduced NotificationPersistenceManager for storing scheduled notifications.
- Created utility functions for calculating next occurrences based on schedule types and intervals.

feat: Define ScheduleType enum for notification scheduling

- Created ScheduleType enum to represent different notification scheduling types.
- Added extension methods for string representation and human-readable descriptions of schedule types.
- Introduced WeekDay enum for specifying days of the week in weekly schedules.

feat: Develop NotificationSchedule model for structured notification data

- Created NotificationSchedule class to encapsulate notification scheduling details.
- Implemented factory constructors for one-time and recurring schedules.
- Added methods for converting to and from maps for platform communication.

feat: Introduce ScheduledNotificationInfo model for tracking scheduled notifications

- Developed ScheduledNotificationInfo class to store information about scheduled notifications.
- Implemented methods for checking expiration and recurrence of notifications.
- Added BatchScheduleResult and BatchScheduleError classes for handling batch scheduling operations.

feat: Create ScheduledNotificationQuery for filtering scheduled notifications

- Implemented ScheduledNotificationQuery class to facilitate querying of scheduled notifications based on various criteria.

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -38,5 +38,11 @@
             android:name=".NotificationReceiver"
             android:enabled="true"
             android:exported="false" />
+
+        <!-- Scheduled notification receiver -->
+        <receiver
+            android:name=".ScheduledNotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 </manifest>
