--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,7 @@ android {
         implementation 'androidx.core:core-ktx:1.10.1'
         implementation 'androidx.work:work-runtime-ktx:2.8.1'
         implementation 'androidx.media:media:1.6.0'
+        implementation 'com.google.code.gson:gson:2.10.1'
     }
 
     testOptions {
