--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,7 +26,7 @@ flutter:
 
   assets:
     - assets/audio/
-    - assets/images/
+    # - assets/images/
 
   # Example audio files for testing
   # You should add actual audio files to assets/audio/ directory
