feat: Update audio file references to use 'athan.mp3' across documentation and code examples

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,5 +28,5 @@ flutter:
     - assets/audio/
     # - assets/images/
 
-  # Example audio files for testing
-  # You should add actual audio files to assets/audio/ directory
+  # Example audio file for testing
+  # You should add athan.mp3 to assets/audio/ directory
